--- a/config-client-kafka_to_elastic.yml
+++ b/config-client-kafka_to_elastic.yml
@@ -39,5 +39,5 @@ elastic-config:
   connection-url: http://localhost:9200
   connect-timeout-ms: 5000
   socket-timeout-ms: 30000
-  is-repository: true
+  is-repository: false
 
